--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -205,7 +205,7 @@
           </td>
         </ng-container>
         <!-- Visa-->
-        <ng-container matColumnDef="Visa">
+        <ng-container  *ngIf="flag !== 'DomRecruiting'" matColumnDef="Visa">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Visa" mat-sort-header> Visa</th>
           <td mat-cell *matCellDef="let element"> {{element?.visa_status}}
           </td>
@@ -246,7 +246,7 @@
         </ng-container>
 
         <!-- RAte Column -->
-        <ng-container matColumnDef="Rate">
+        <ng-container  *ngIf="flag !== 'DomRecruiting'" matColumnDef="Rate">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Rate" mat-sort-header> Rate </th>
           <td mat-cell *matCellDef="let element" class="text-align"> {{ element.hourlyrate }}</td>
         </ng-container>
