--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -276,7 +276,7 @@
 
       <!-- Unmatched Skills Column -->
       <ng-container matColumnDef="unMatchedSkills">
-        <th mat-header-cell *matHeaderCellDef sticky>MisMatched Skills</th>
+        <th mat-header-cell *matHeaderCellDef sticky>Mismatched Skills</th>
         <td mat-cell *matCellDef="let c" style="    max-width: 24rem;">
 
           {{ c.unMatchedSkills || "-" }}
