fixed  changes in consultant

--- a/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
+++ b/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
@@ -36,7 +36,8 @@
                         <mat-option value="Only Locals">Only Locals</mat-option>
                         <mat-option value="Submitted">Submitted </mat-option>
                         <mat-option value="Skills Not Matching">Skills Not Matching</mat-option>
-                        <mat-option value="Visa is not matching">Visa is not matching</mat-option>
+                    <mat-option value="Experience Not Matching">Experience Not Matching</mat-option>
+                    <mat-option value="Visa is not matching">Visa is not matching</mat-option>
                     </mat-select>
                     <mat-error *ngIf="jobApplyCommentsForm.get('issueType').hasError('required')">Status is
                         Required
