fixed forget password

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -36,9 +36,9 @@
                                 is required</mat-error>
                         </mat-form-field> -->
                         
-                        <div class="forgot-password">
+                        <!-- <div class="forgot-password">
                             <a routerLink="/forgot-password">Forgot Password?</a>
-                        </div>
+                        </div> -->
 
                         <button mat-raised-button color="primary" class="login-button">Login</button>
                         <div class="create-account">
